--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+    "react/forbid-prop-types": "off",
     "prettier/prettier": [
       "error",
       {
